--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootLogger=ERROR, stdout
 
-log4j.logger.org.apache.kafka.clients.producer.KafkaProducer=ALL
-log4j.logger.org.apache.kafka.clients.producer.KafkaConsumer=ALL
+#log4j.logger.org.apache.kafka.clients.producer.KafkaProducer=ALL
+#log4j.logger.org.apache.kafka.clients.producer.KafkaConsumer=ALL
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
